--- a/turbo.json
+++ b/turbo.json
@@ -1,14 +1,14 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
+  "baseBranch": "origin/main",
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
-    },
-    "lint": {
       "outputs": []
     },
-    "dev": {
-      "cache": false
+    "test": {
+      "dependsOn": ["^build"],
+      "outputs": []
     }
   }
 }
