--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@eviteri/ui",
+  "author": "Eloy Viteri",
+  "description": "Turbo Repo UI library",
   "version": "1.0.0",
+  "license": "MIT",
+  "private": false,
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@eviteri"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "license": "MIT",
   "scripts": {
     "dev": "tsc --watch --outDir dist",
     "prebuild": "rm -rf ./dist",
-    "build": "npm run prebuild && tsc --outDir dist",
+    "build": "tsc --outDir dist && npm run build:copyAssets",
     "build:copyAssets": "cp ./package.json ./dist/ && cp ./README.md ./dist/",
     "lint": "eslint *.ts*"
   },
