--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "tsconfig/react-library.json",
   "compilerOptions": {
     "outDir": "dist/",
-    "jsx": "react"
+    "jsx": "react",
+    "lib": ["es2015", "dom", "dom.iterable", "esnext"],
   },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
