--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,48 @@
-# name: CI
+name: CI
 
-# on:
-#   push:
-#     branches: ["main"]
-#   pull_request:
-#     types: [opened, synchronize]
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    types: [opened, synchronize]
 
-# jobs:
-#   build:
-#     name: Build and Test
-#     timeout-minutes: 15
-#     runs-on: ${{ matrix.os }}
-#     # To use Remote Caching, uncomment the next lines and follow the steps below.
-#     # env:
-#     #  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-#     #  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-#     #  TURBO_REMOTE_ONLY: true
-#     strategy:
-#       matrix:
-#         os: [ubuntu-latest, macos-latest]
+jobs:
+  build:
+    name: Build and Test
+    timeout-minutes: 15
+    runs-on: ${{ matrix.os }}
+    # To use Remote Caching, uncomment the next lines and follow the steps below.
+    # env:
+    #  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+    #  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+    #  TURBO_REMOTE_ONLY: true
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
 
-#     steps:
-#       - name: Check out code
-#         uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 2
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
 
-#       - name: Setup Node.js environment
-#         uses: actions/setup-node@v2
-#         with:
-#           node-version: 16
-#           cache: "npm"
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: "npm"
 
-#       - name: Install dependencies
-#         run: npm install
+      - name: Install dependencies
+        run: npm install
 
-#       - name: Build
-#         run: npm run build
+      - name: Build
+        run: npm run build
+
+      # - name: Switching to /packages/ui directory
+      #   run:
+      #     working-directory: packages/ui/dist
+
+      # - name: Publish UI Package
+      #   run: npm publish
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{secrets.ACCESS_TOKEN}}
