--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Publish UI Package
         run: |
           cd ./packages/ui/dist
-          npm publish --registry=https://npm.pkg.github.com/
+          npm publish --registry=https://npm.pkg.github.com/@eviteri
         env:
           NODE_AUTH_TOKEN: ${{secrets.ACCESS_TOKEN}}
