--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,10 @@ jobs:
         run: npm install
 
       - name: Build
+        working-directory: ./packages/ui/
         run: npm run build
 
       - name: Publish UI Package
-        run: |
-          cd ./packages/ui/dist
-          npm publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.ACCESS_TOKEN}}
