--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build and Test
+    name: Build and Deploy
     timeout-minutes: 15
     runs-on: ${{ matrix.os }}
     # To use Remote Caching, uncomment the next lines and follow the steps below.
@@ -27,10 +27,16 @@ jobs:
           fetch-depth: 2
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 12
           cache: "npm"
+          registry-url: https://npm.pkg.github.com/
+          scope: "@eviteri"
+        # uses: actions/setup-node@v2
+        # with:
+        #   node-version: 16
+        #   cache: "npm"
 
       - name: Install dependencies
         run: npm ci
