--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "repository" : {
     "type" : "git",
-    "registry": "https://npm.pkg.github.com/@eviteri/turborepo",
+    "url": "https://npm.pkg.github.com/@eviteri/turborepo",
     "directory": "packages/turborepo-ui"
   },
   "main": "./dist/index.js",
