--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "@eviteri/turborepo-ui": "*",
+    "@eviteri/turborepo-store": "*",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
