--- a/.github/workflows/storePackage.yml
+++ b/.github/workflows/storePackage.yml
@@ -2,9 +2,10 @@ name: turborepo-store
 
 on:
   push:
-    branches: ["main"]
-  paths:
-    - "packages/store/**"
+    branches:
+      - main
+    paths:
+      - "packages/store/**"
 
 jobs:
   build:
