--- a/.github/workflows/uiPackage.yml
+++ b/.github/workflows/uiPackage.yml
@@ -2,9 +2,10 @@ name: turborepo-ui
 
 on:
   push:
-    branches: ["main"]
-  paths:
-    - "packages/ui/**"
+    branches:
+      - main
+    paths:
+      - "packages/ui/**"
 
 jobs:
   build:
