--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^4.2.6",
+    "@mantine/hooks": "^4.2.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,12 +12,14 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@eviteri/turborepo-card": "*",
+    "@eviteri/turborepo-movies": "*",
+    "@eviteri/turborepo-playlist": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "@eviteri/turborepo-ui": "*",
-    "@eviteri/turborepo-store": "*",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
