--- a/packages/placeholder/package.json
+++ b/packages/placeholder/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "@eviteri/turborepo-store",
+  "name": "@eviteri/turborepo-placeholder",
   "author": "Eloy Viteri",
-  "description": "Turbo Repo Store library",
+  "description": "Turbo Repo UI library",
   "version": "1.0.0",
+  "license": "MIT",
+  "private": false,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "license": "MIT",
-  "repository" : {
-    "type" : "git",
-    "url": "git+https://github.com/eviteri/turborepo.git",
-    "directory": "packages/turborepo-store"
-  },
   "scripts": {
     "dev": "tsc --watch --outDir dist",
-    "build": "tsc --outDir dist && npm run build:copyAssets",
+    "prebuild": "rm -rf ./dist",
+    "build": "tsc && npm run build:copyAssets",
     "build:copyAssets": "cp ./package.json ./dist/ && cp ./README.md ./dist/",
     "lint": "eslint *.ts*"
   },
@@ -25,8 +22,6 @@
     "react": "^18.2.0",
     "tsconfig": "*",
     "typescript": "^4.5.2"
-  },
-  "dependencies": {
-    "zustand": "4.0.0-rc.1"
   }
 }
+
