--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,20 +2,17 @@
   "name": "@eviteri/turborepo-ui",
   "author": "Eloy Viteri",
   "description": "Turbo Repo UI library",
-  "version": "1.0.0",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
-  "private": false,
   "repository" : {
     "type" : "git",
     "url": "git+https://github.com/eviteri/turborepo.git",
     "directory": "packages/turborepo-ui"
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "tsc --watch --outDir dist",
-    "prebuild": "rm -rf ./dist",
-    "build": "tsc && npm run build:copyAssets",
+    "build": "tsc --outDir dist && npm run build:copyAssets",
     "build:copyAssets": "cp ./package.json ./dist/ && cp ./README.md ./dist/",
     "lint": "eslint *.ts*"
   },
@@ -25,8 +22,13 @@
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "react": "^18.2.0",
+    "@eviteri/turborepo-store": "*",
     "tsconfig": "*",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@mantine/core": "^4.2.6",
+    "@mantine/hooks": "^4.2.6",
+    "react-router-dom": "^6.3.0"
   }
 }
-
